--- a/DrawingApp/DrawingApp.vbproj
+++ b/DrawingApp/DrawingApp.vbproj
@@ -100,6 +100,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PBox.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DrawingApp.resx">
@@ -125,6 +126,9 @@
     </None>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fish head.PNG" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
